@@ -1,3 +1,6 @@
+
+// import javax.crypto.Cipher;
+
 // public class Inherit {
 //     public static void main(String []args){
 
@@ -154,3 +157,79 @@
 // 阻止继承
 // 正常情况下只要某个class没有final修饰符，那么任何类都可以从该类继承。
 // 从java15开始，允许使用sealed修饰class，并通过permits明确写出能够从该class继承的子类名称。
+// 定义一个shape类
+// Shape类就是一个sealed类，它只允许指定的3个类继承它。
+// public sealed class shape permits Rect,Circle,Triangle{
+// }
+// 上述shape类就是一个sealed类，它只允许指定的三个类继承它。
+// public final class Rect extends Shape{
+// }
+// 这样写没问题因为Rect出现在了permits的列表中。如果定义没在permits列表中的类就会报错。
+// 这种sealed类主要用于一些框架，防止继承被滥用。
+// sealed类在Java 15中目前是预览状态，要启用它，必须使用参数--enable-preview和--source 15。 
+
+
+// 向上转行
+// 如果一个引用变量类型是student，那么它可以指向一个student类型的实例
+// Student s = new Student();
+// 如果一个引用类型的变量是Person，那么它可以指向一个Person类型的实例：
+// Person p = new Person();
+// 如果Student是从Person继承下来的，一个引用类型为Person的变量，会指向Student类型的实例
+// Person p = new Student();
+// 因为Student继承自Person，因此，它拥有Person的全部功能。Person类型的变量，如果指向Student类型的实例，对它进行操作，是没有问题的！
+// 这种把一个子类类型安全地变为父类类型的赋值，被称为向上转型（upcasting）。
+// 向上转型实际上是把一个子类型安全地变为更加抽象的父类型：
+// Student s = new Student();
+// Person p = s; // upcasting, ok
+// Object o1 = p; // upcasting, ok
+// Object o2 = s; // upcasting, ok
+// 注意到继承树是Student > Person > Object，所以，可以把Student类型转型为Person，或者更高层次的Object。
+
+// 向下转行
+// 和向上转行相反，如果把一个父类类型强制转型为子类类型，那就是向下转行。
+// Person p1 = new Student(); // upcasting, ok
+// Person p2 = new Person();
+// Student s1 = (Student) p1; // ok
+// Student s2 = (Student) p2; // runtime error! ClassCastException!
+/* 
+ * 
+ * Person类型p1实际指向Student实例，Person类型变量p2实际指向Person实例。
+ * 在向下转型的时候，把p1转型为Student会成功，因为p1确实指向Student实例，
+ * 把p2转型为Student会失败，因为p2的实际类型是Person，不能把父类变为子类，
+ * 因为子类功能比父类多，多的功能无法凭空变出来。
+ * 
+ * 向下转型很可能会失败。失败的时候，Java虚拟机会报ClassCastException。
+ * 
+ */
+
+// 为了避免向下转型出错，Java提供了instanceof操作符，可以先判断一个实例究竟是不是某种类型：
+// Person p = new Person();
+// System.out.println(p instanceof Person); // true
+// System.out.println(p instanceof Student); // false
+
+// Student s = new Student();
+// System.out.println(s instanceof Person); // true
+// System.out.println(s instanceof Student); // true
+
+// Student n = null;
+// System.out.println(n instanceof Student); // false
+// instanceof实际上判断一个变量所指向的实例是否是指定类型，或者这个类型的子类。如果一个引用变量为null，那么对任何instanceof的判断都为false。
+// 利用instanceof，在向下转型前可以先判断：
+// Person p = new Student();
+// if (p instanceof Student) {
+//     // 只有判断成功才会向下转型:
+//     Student s = (Student) p; // 一定会成功
+// }
+// 从Java 14开始，判断instanceof后，可以直接转型为指定变量，避免再次强制转型。
+// instanceof variable:
+// public class Inherit {
+//     public static void main(String[] args) {
+//         Object obj = "hello";
+//         if (obj instanceof String s) {
+//             // 可以直接使用变量s:
+//             System.out.println(s.toUpperCase());
+//         }
+//     }
+// }
+// 区分继承和组合
+// 在使用继承时，我们要注意逻辑一致性。
